Initial commit - AL RABEI REAL STATE project

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,13 +2,11 @@
   "name": "alrabie-real-estate-backend",
   "version": "1.0.0",
   "description": "Backend for Alrabie Real Estate application",
-  "main": "server.js",
+  "main": "start-server.js",
   "scripts": {
     "start": "node start-server.js",
     "dev": "nodemon start-server.js",
-    "server": "node server.js",
     "init-db": "node scripts/init-db.js",
-    "add-sample": "node scripts/add-sample-properties.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
